fix: add letter-spacing

--- a/apps/xi.vacancy/public/global.css
+++ b/apps/xi.vacancy/public/global.css
@@ -1,3 +1,7 @@
+* {
+    letter-spacing: 0.025em
+}
+
 .mdx-h2 {
     margin: 32px 0 24px 0;
     font-weight: 600;
